--- a/apps/mentoraone/deployment.yaml
+++ b/apps/mentoraone/deployment.yaml
@@ -18,3 +18,6 @@ spec:
           image: ghcr.io/hamza-bot-dev/mentoraone:dev
           ports:
             - containerPort: 80
+containers:
+  - name: mentoraone
+    image: ghcr.io/hamza-bot-dev/mentoraone:dev
